force-app/main/default/objects/Forecast_Group__c/Forecast_Group__c.object-meta.xml
<CustomObject>
    <label>Forecast Group</label>
    <pluralLabel>Forecast Groups</pluralLabel>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >A sub-config within a Forecast Configuration that defines membership criteria (RecordType OR custom field on Opp/child object), display order, and optional terminal stage overrides. Each config has 1+ groups. Most configs have a single auto-created "All Opportunities" group.</description>
</CustomObject>