force-app/main/default/objects/Forecast_Group__c/fields/Closed_Lost_Stages__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Stages__c</fullName>
    <label>Closed Lost Stages</label>
    <description
  >Comma-separated Opportunity stage API names treated as lost for this group. Only used when Override_Stages = true.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>