force-app/main/default/objects/Forecast_Group__c/fields/Forecast_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Configuration__c</fullName>
    <label>Forecast Configuration</label>
    <description
  >The parent Forecast Configuration. Lookup (NOT master-detail) so groups persist when config is archived.</description>
    <referenceTo>Forecast_Configuration__c</referenceTo>
    <relationshipName>Forecast_Groups</relationshipName>
    <relationshipLabel>Forecast Groups</relationshipLabel>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>