force-app/main/default/objects/Forecast_Group__c/fields/Group_Field__c.field-meta.xml
<CustomField>
    <fullName>Group_Field__c</fullName>
    <label>Group Field</label>
    <description
  >API name of the grouping field on Group_Source_Object__c. e.g., Type (Opportunity), Booking_Type__c (custom). Only used when Group_Type = Custom_Field.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>