force-app/main/default/objects/Forecast_Group__c/fields/Group_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Group_Field_Values__c</fullName>
    <label>Group Field Values</label>
    <description
  >Comma-separated picklist values that belong to this group (matched against Group_Field__c). Only used when Group_Type = Custom_Field.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>