force-app/main/default/objects/Forecast_Group__c/fields/Group_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Group_Lookup_Field__c</fullName>
    <label>Group Lookup Field</label>
    <description
  >The field on Group_Source_Object__c that points to Opportunity. e.g., OpportunityId for OpportunityLineItem, Opportunity__c for custom child objects. Only used when Group_Type = Custom_Field and Group_Source_Object != Opportunity.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>