force-app/main/default/objects/Forecast_Group__c/fields/Group_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Group_Source_Object__c</fullName>
    <label>Group Source Object</label>
    <description
  >API name of the object holding the grouping field. e.g., Opportunity, OpportunityLineItem, SBQQ__QuoteLine__c, Product_Bookings__c. Only used when Group_Type = Custom_Field.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>