force-app/main/default/objects/Forecast_Group__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <description
  >How this group's membership is determined: All opportunities, by Record Type, or by a custom field value on Opportunity / a child object.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All Opportunities</label>
            </value>
            <value>
                <fullName>Record_Type</fullName>
                <label>By Record Type</label>
            </value>
            <value>
                <fullName>Custom_Field</fullName>
                <label>By Custom Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>