force-app/main/default/objects/Forecast_Group__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description
  >When false, group is hidden from forecast UI. Historical overrides referencing this group remain queryable.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>