force-app/main/default/objects/Forecast_Group__c/fields/Override_Stages__c.field-meta.xml
<CustomField>
    <fullName>Override_Stages__c</fullName>
    <label>Override Stages</label>
    <description
  >When true, this group uses its own Closed_Won_Stages and Closed_Lost_Stages. When false, inherits from config-level stages.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>