force-app/main/default/objects/Forecast_Group__c/fields/Record_Type_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Names__c</fullName>
    <label>Record Type Names</label>
    <description
  >Comma-separated Opportunity RecordType DeveloperNames included in this group. Only used when Group_Type = Record_Type.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>